# embi-launcher

./: .gitignore  CMakeLists.txt  README.md
applications/: CMakeLists.txt  main.cpp
applications/qml/: AM00_Launcher.qml  AW00_Launcher.qml  LauncherInfosBar.qml  LauncherSettingsModel.qml  LauncherStatusBar.qml  SettingsLauncherView.qml
applications/src/: A00_LauncherManager.cpp  A00_LauncherManager.h  Launcher.cpp  Launcher.h
cmake/: Boot2Qt.cmake  CMakeGraphVizOptions.cmake  Common.cmake  CreateDebPackage.cmake  FileRecurseRelative.cmake  GenerateIconsClass.cmake  GitTag.cmake  TryLinkLibrary.cmake
libraries/: CMakeLists.txt
libraries/Addons/: CMakeLists.txt
libraries/Addons/QDeferred/: CMakeLists.txt  QDeferred  QDeferred.pro  QEventer  README.md  qdeferred.hpp  qdeferreddata.cpp  qdeferreddata.hpp  qdynamiceventsdata.cpp  qdynamiceventsdata.hpp  qeventer.cpp  qeventer.h  qlambdathreadworker.cpp  qlambdathreadworker.h  qlambdathreadworkerdata.cpp  qlambdathreadworkerdata.h
libraries/Addons/QJsonVariant/: CMakeLists.txt  README.md  qcborvariantreader.cpp  qjsonvariantreader.cpp  qjsonvariantreader.h  qutf8.h
libraries/Addons/QsLog/: CMakeLists.txt  QsLog.cpp  QsLog.h  QsLog.pro  QsLogDest.cpp  QsLogDest.h  QsLogDestConsole.cpp  QsLogDestConsole.h  QsLogDestFile.cpp  QsLogDestFile.h  QsLogDestFunctor.cpp  QsLogDestFunctor.h  QsLogDestModel.cpp  QsLogDestModel.h  QsLogLevel.cpp  QsLogLevel.h  QsLogMessage.cpp  QsLogMessage.h  QsLogQmlTypes.h  README.md
libraries/Tier1/: CMakeLists.txt
libraries/Tier1/QDefs/: CMakeLists.txt  QDefs  README.md  qattacheddefs.h  qenumdefs.h  qflagdefs.h  qlogdefs.h  qoperatordefs.h  qprojectdefs.h  qpropertydefs.h  qsingletondefs.h  qtimedefs.h  qutildefs.h  qvariantdefs.h
libraries/Tier1/QModels/: CMakeLists.txt  QModels  README.md  qcheckableproxymodel.cpp  qcheckableproxymodel.h  qcsvlistmodel.cpp  qcsvlistmodel.h  qemptymodel.h  qjsonlistmodel.cpp  qjsonlistmodel.h  qmodelhelper.cpp  qmodelhelper.h  qmodelmatcher.cpp  qmodelmatcher.h  qmodels_log.h  qnumbermodel.cpp  qnumbermodel.h  qobjectlistmodel.cpp  qobjectlistmodel.h  qobjectlistmodeliterator.h  qobjectlistproperty.h  qobjectnestmodel.cpp  qobjectnestmodel.h  qobjecttreemodel.cpp  qobjecttreemodel.h  qselectionhelper.cpp  qselectionhelper.h  qstandardobjectmodel.cpp  qstandardobjectmodel.h  qvariantlistmodel.cpp  qvariantlistmodel.h  qvariantreadermodel.cpp  qvariantreadermodel.h
libraries/Tier1/QModels/syncable/: qsalgotypes.h  qsdiffrunner.cpp  qsdiffrunner.h  qsdiffrunneralgo.cpp  qsdiffrunneralgo.h  qspagination.cpp  qspagination.h  qspatch.cpp  qspatch.h  qspatchable.h  qspatchablepatch.cpp  qspatchablepatch.h  qstree.cpp  qstree.h  qsworker.cpp  qsworker.h
libraries/Tier1/QProxyModel/: CMakeLists.txt  QProxyModel  README.md  qproxymodel.cpp  qproxymodel.h  qproxymodel_log.h  qproxyobject.cpp  qproxyobject.h  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h  qvariantcompare.cpp  qvariantcompare.h
libraries/Tier1/QProxyModel/filters/: alloffilter.cpp  alloffilter.h  anyoffilter.cpp  anyoffilter.h  expressionfilter.cpp  expressionfilter.h  filter.cpp  filter.h  filtercontainer.cpp  filtercontainer.h  filtercontainerfilter.cpp  filtercontainerfilter.h  filtersqmltypes.h  indexfilter.cpp  indexfilter.h  modelfilter.cpp  modelfilter.h  rangefilter.cpp  rangefilter.h  regexpfilter.cpp  regexpfilter.h  rolefilter.cpp  rolefilter.h  valuefilter.cpp  valuefilter.h  valuesfilter.cpp  valuesfilter.h
libraries/Tier1/QProxyModel/proxyroles/: aliasrole.cpp  aliasrole.h  expressionrole.cpp  expressionrole.h  filterrole.cpp  filterrole.h  joinrole.cpp  joinrole.h  maprole.cpp  maprole.h  methodrole.cpp  methodrole.h  patternrole.cpp  patternrole.h  proxyrole.cpp  proxyrole.h  proxyrolecontainer.cpp  proxyrolecontainer.h  proxyrolesqmltypes.h  regexprole.cpp  regexprole.h  relationrole.cpp  relationrole.h  singlerole.cpp  singlerole.h  switchrole.cpp  switchrole.h
libraries/Tier1/QProxyModel/sorters/: expressionsorter.cpp  expressionsorter.h  filtersorter.cpp  filtersorter.h  rolesorter.cpp  rolesorter.h  sorter.cpp  sorter.h  sortercontainer.cpp  sortercontainer.h  sortersqmltypes.h  stringsorter.cpp  stringsorter.h
libraries/Tier1/QUtils/: CMakeLists.txt  QUtils  README.md  qapplicationhelper.cpp  qapplicationhelper.h  qfilecopier.cpp  qfilecopier.h  qframetimer.cpp  qframetimer.h  qitemcapturer.cpp  qitemcapturer.h  qjsonmapper.cpp  qjsonmapper.h  qjsonutils.cpp  qjsonutils.h  qkeyeventnotifier.cpp  qkeyeventnotifier.h  qloopprocessor.cpp  qloopprocessor.h  qmodelmapper.cpp  qmodelmapper.h  qmouseeventnotifier.cpp  qmouseeventnotifier.h  qnetworkping.cpp  qnetworkping.h  qobjecthelper.cpp  qobjecthelper.h  qobjectmapper.cpp  qobjectmapper.h  qqmlloader.cpp  qqmlloader.h  qscaneventnotifier.cpp  qscaneventnotifier.h  qsettingsmapper.cpp  qsettingsmapper.h  qsignalthrottler.cpp  qsignalthrottler.h  qsingleton.h  qthrottler.h  qtranslatorloader.cpp  (+11 more)
libraries/Tier1/QUtils/vendors/qtfilecopier/: qtfilecopier.cpp  qtfilecopier.h
libraries/Tier2/: CMakeLists.txt
libraries/Tier2/Solid/: CMakeLists.txt  README.md  Solid
libraries/Tier2/Solid/src/: solid_log.h
libraries/Tier2/Unit/: CMakeLists.txt  README.md  Unit
libraries/Tier2/Unit/src/: angleunit.cpp  angularvelocityunit.cpp  forceunit.cpp  lengthunit.cpp  massunit.cpp  percentunit.cpp  timeunit.cpp  torquepertimeunit.cpp  torqueunit.cpp  unit_helpertypes.cpp  unit_helpertypes.h  unit_log.h  unitcategoryobject.cpp  unitcategoryobject.h  unitobject.cpp  unitobject.h  units.cpp  units.h
libraries/Tier3/: CMakeLists.txt
libraries/Tier3/Axion/: Axion  CMakeLists.txt  README.md
libraries/Tier3/Axion/qml/: JS.qml  Style.qml
libraries/Tier3/Axion/src/: axion_helpertypes.cpp  axion_helpertypes.h  axion_log.h
libraries/Tier3/Files/: CMakeLists.txt  README.md
libraries/Tier3/Files/src/: files_log.h  filesystem.cpp  filesystem.h  fstab.cpp  (+5 more)
libraries/Tier3/Network/: CMakeLists.txt  README.md
libraries/Tier3/Swupdate/: CMakeLists.txt  README.md  Swupdate
libraries/Tier3/System/: CMakeLists.txt  System
(+540 files in other folders)
