####################################################################################################################
##
## Addons Libraries
##
## Plusieurs librairies et utilitaire externe. Pour des raisons de pérennité, les sources ont été copiées.
##
## La totalité de ces librairies sont maintenues pas des éditeurs tiers.
## Certaines adaptations ont néanmoins été apportées pour addapter les sources à la structure et l'architecture de l'écosystème.
##
####################################################################################################################

include(Common)

add_subdirectory(QDeferred)
add_subdirectory(QJsonVariant)
add_subdirectory(QsLog)

