####################################################################################################################
##
## Tier1 Libraries
##
## Les librairies Tier 1 n'ont aucune dépendences et ne nécessite que Qt pour fonctionner
##
####################################################################################################################

include(Common)

add_subdirectory(QDefs)
add_subdirectory(QModels)
add_subdirectory(QProxyModel)
add_subdirectory(QUtils)
